# eventlog

./: .efiles  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  build.rs  rustfmt.toml
src/: eventmsgs.rs  filtering.rs  lib.rs
tests/: end-to-end.rs
