[package]
name = "eventlog"
version = "0.3.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
categories = ["development-tools::debugging", "os::windows-apis"]
description = "A log-compatible wrapper around the Windows Event Log API"
repository = "https://github.com/locryus/eventlog"
keywords = ["eventlog", "logging", "windows"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.58.0"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu"]

[dependencies]
log = { version = "0.4.17", features = ["std"] }
windows-result = "0.4.1"
windows-registry = "0.6.1"
thiserror = "1.0.38"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_System_EventLog",
  "Win32_Security",
]

[build-dependencies]
regex = { version = "1.7.1", default-features = false, features = [
  "std", "unicode-perl"
] }
sha2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

